tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_42.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((~ ((x MOD 1223) = (1223 + 1))) & (((+ 0) = (1223 - 2)) & ((1 - 1) = (200 DIV 200))));
               y := (+ (+ (- (+ 0))));
  (* error *)  z := (+ ((+ (r + 200)) - ((z * y) + (1223 MOD 1223))));
               z := ((((+ 1223) + (0 * 1223)) * ((- 2) DIV (0 + 0))) * (((x MOD 1223) MOD (- 0)) MOD ((+ x) * (200 DIV y))));
               q := ((((y + 2) * (1 MOD 0)) - ((1 * 2) + (y MOD y))) < ((- (z DIV 1)) - ((1 + 2) + (- x))));
               r := ((((1 - z) DIV (z - 2)) * ((200 * y) + (+ y))) <= (((2 + 1) MOD (- y)) * ((z + 200) * (1 - z))));
               r := (~ (((0 * 200) DIV (200 - 1223)) <= ((- y) MOD (x DIV y))));
               p := ((+ (- (0 - y))) = (((2 + z) - (2 + 1)) DIV (+ (+ y))));
               p := ((((x * y) DIV (+ x)) # ((1223 + x) - (2 - y))) OR (((1 MOD 0) MOD (x + y)) <= ((y DIV 1) * (x DIV 1))));
               z := ((((x + z) MOD (0 * 1223)) DIV (- (y + 1))) + (((y + y) - (+ 2)) * ((1 + z) + (- 2))))
END Test13.